CORS issue fix-1